# inspect-evidence-sufficiency

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: inspect-proposal.md
examples/: inspect-log-mockllm.json  source_manifest.json  synthetic_inspect_log.json
examples/controlarena-export/: README.md  metadata.json  tools.json  trajectory.jsonl
examples/monitor-coverage/: README.md  trace-covered.json  trace-uncovered.json
examples/release-gate/: README.md  trace-missing-monitor.json  trace-with-monitor.json
scripts/: fetch_public_trace.py
src/inspect_evidence_sufficiency/: __init__.py  card.py  cli.py  controlarena_adapter.py  coverage.py  coverage_cli.py  extract.py  gatelib.py  inspect_adapter.py  inspect_coverage.py
tests/: test_card.py  test_controlarena.py  test_coverage.py  test_extract.py  test_gate.py  test_inspect_adapter.py  test_inspect_coverage.py
